<resources>
    <string name="app_name">Currency Converter</string>
    <string name="currencies">Currencies</string>
    <string name="from">From</string>
    <string name="naira_ngn">Naira (NGN)</string>
    <string name="to">To</string>
    <string name="bitcoin_btc">Bitcoin (BTC)</string>
    <string name="round_up_currency">Round up currency?</string>
    <string name="convert">Convert</string>
    <string name="rateTwoDp">Result:\n\n %1$s%2$s rounded to a 2 decimal places approximately %3$s%4$s</string>
    <string name="rateWholeNo">Result:\n\n %1$s%2$s rounded to a whole number approximately %3$s%4$s</string>
</resources>